Fixes and improvements for `gx-edit` and `gx-password-edit` controls (#324)
* Fix merge conflict with master

The tests were moved to their corresponding folder

* Remove gx-edit old implementation

The new implementation will be in the next commit

* Refactoring for the gx-edit implementation

 - Reduced the number of nested tags used to implement the control (less HTML).

 - In addition, reduced the amount of JavaScript and CSS needed to implement the gx-edit's behaviors.

 - The fontCategory property will no longer be computed from the style.

 - Fix: Clipped shadows when the gx-edit is multiline.

 - Improved the style of the trigger button.

issue: 102440, 102441, 102442

* Add missing commit for types file

* Focus input when container is clicked

Since the inner input must to support vertical alignment, it can't have height: 100%, so clicks performed in the container must focus the inner input.

issue: 102520

* Adjust line-clamp support for gx-edit

* Improve auto grow support for multiline gx-edit

 - issue: 102521. The gx-edit control will stretch to all the available space by default

 - issue: 102522. The gx-edit control will force its container to auto grow if the gx-edit has auto-grow = true.

 - issue: 102522. The resize button will not be shown in the gx-edit if auto-grow = false.

issue: 102521, 102522

* Remove unnecessary CSS selectors for gx-edit

* Add missing CSS after merge conflict

* Improve fontCategory implementation

* Add support for Shadow DOM in the gx-edit control

To implement accesibility in the gx-edit control, the labelCaption property was added to the control. This property takes the same value as the labelCaption property of the gx-form-field parent.

Also, the label and the input will no longer be binded in the gx-edit, instead, when the gx-form-field's label is clicked, an event handler will click the gx-edit, setting focus in the input (or textarea) of the control.

issue:

--- a/src/components/common/_base.scss
+++ b/src/components/common/_base.scss
@@ -85,6 +85,29 @@
   }
 }
 
+@mixin line-clamp-2() {
+  // Used to measure the box height, in order to make the lines clampable
+  .height-measuring {
+    display: flex;
+    width: 0;
+    height: 100%;
+    visibility: hidden;
+  }
+
+  .line-clamp {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: var(--max-lines);
+    overflow: hidden;
+  }
+
+  // Used to measure the line height, in order to make the lines clampable
+  .line-measuring {
+    visibility: hidden;
+    position: absolute;
+  }
+}
+
 @mixin scss-custom-option-control($option-border-radius: 100%) {
   $custom-option-size: min(1em, 20px);
   $disabled-color: #a5a8aac0;
